# jrif

./: .gitignore  LICENSE  flake.nix  zensical.toml
.github/workflows/: docs.yml  go.yml  python.yml  rust.yml
docs/: index.md  spec.md
docs/v0/: schema.json
docs/v1/: schema.json
go/: cache.go  cursor.go  errors.go  fetcher.go  go.mod  index.go  index_test.go  iter.go  nav.go  types.go  types_test.go
python/: README.md  pyproject.toml
python/jrif/: __init__.py  cursor.py  document.py  errors.py  index.py  nav.py  source.py
python/tests/: bench.py  sample.json  sample.json.jrif  test_reader.py
rust/: Cargo.toml
rust/jrif-cli/: Cargo.toml
rust/jrif-cli/src/: main.rs
rust/src/: document.rs  error.rs  lib.rs  nav.rs  parser.rs  writer.rs
rust/src/reader/: cursor.rs  iter.rs  mod.rs  source.rs  tokio_fs.rs
rust/tests/: cursor.rs
