[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jrif"
version = "0.1.0"
description = "Reader for the JSON Range Index Format (JRIF) v0."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Brian Li" }]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["jrif"]

[tool.pytest.ini_options]
testpaths = ["tests"]
