[workspace]
members = ["jrif-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[package]
name = "jrif"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reader and writer for the JSON Range Index Format (JRIF) v0."

[lints]
workspace = true

[lib]
name = "jrif"
path = "src/lib.rs"

[features]
default = ["reader", "writer"]
reader = []
writer = ["dep:memchr"]
tokio = ["reader", "dep:tokio"]

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
memchr = { version = "2", optional = true }
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
