[package]
name = "jrif-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for JRIF (JSON Range Index Format)."

[lints]
workspace = true

[[bin]]
name = "jrif"
path = "src/main.rs"

[dependencies]
jrif = { path = "..", features = ["reader", "writer", "tokio"] }
bytes = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std"] }
